packages/preview/modern-xmu-thesis/0.2.2/README.md
# 厦门大学本科毕业论文模板 modern-xmu-thesis

厦门大学本科毕业论文（设计）的 Typst 模板，能够简洁、快速、持续生成 PDF 格式的毕业论文。

推荐加入「Typst 非官方中文交流群」进行交流：793548390

## 使用方法

开始使用模板时，请先完整阅读模板中的默认内容（的预览），了解如何从模板开始编写自己的论文。

### 在线编辑

[Web App](https://typst.app/) 有些类似于 Overleaf，提供了在线编辑和编译的功能，适合不想在本地安装 VSCode 的用户。但是 Web App 并没有安装本地 Windows 或 MacOS 所拥有的字体，所以字体上可能存在差异，需要自行手动上传用到的字体。并且 Web App 是全英文页面，因此更推荐本地编辑。

只需在 Web App 中选择 「Start from template」，在弹出窗口中选择「modern-xmu-thesis」，即可在线创建模板并使用。

### 本地编辑

本地编辑建议使用 [VSCode](https://code.visualstudio.com/download) + [Tinymist](https://github.com/Myriad-Dreamin/tinymist) 进行编辑。

在 VSCode 中按下「Ctrl + Shift + P」打开命令界面，输入「Typst: Show available Typst templates (gallery) for picking up a template」打开 Tinymist 提供的模板列表，然后从里面找到 modern-xmu-thesis，点击「+」号即可创建对应的论文模板。

最后用 VS Code 打开生成的目录，打开 thesis.typ 文件，并按下「Ctrl + K, V」进行实时编辑和预览。

### 本地开发

如果你想要开发本模板，请从 [GitHub 仓库](https://github.com/HPCesia/modern-xmu-thesis)克隆（或下载）代码到本地，将 `template/thesis.typ` 首行的导入路径更换为 `"../lib.typ"`。

## 致谢

- [modern-nju-thesis](https://github.com/nju-lug/modern-nju-thesis) by [OrangeX4](https://github.com/OrangeX4)，本模板建立在该项目的基础之上。
- [xmu-template](https://github.com/F5Soft/xmu-template) by [F5Soft](https://github.com/F5Soft)，许多不在规范中的样式都参考了这一项目。

## 许可证

本项目遵循 MIT 许可证。

本项目中的 `assets/xmu-zi-jiageng.svg` 和 `template/images/xmu-logo.svg` 图片由厦门大学提供，版权归厦门大学所有。未经厦门大学许可，禁止用于其他任何用途。

## License

This project is licensed under the MIT License.

The images `assets/xmu-zi-jiageng.svg` and `template/images/xmu-logo.svg` are provided by Xiamen University, and copyright belongs to Xiamen University. Unauthorized use for any other purpose is prohibited without permission from Xiamen University.